Signed-off-by: Cathal Mc Givney <S00190028@mail.itsligo.ie>

--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
 		
 		<link rel="shortcut icon" href="favicon.ico" />	
 		<link rel="stylesheet" href="layout.css" type="text/css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	</head>
 	<body>
 
-		<canvas id="myCanvas" width="800" height="600" >
-		</canvas>
-	
-
-		<script src="scripts/jquery.js"></script>
-		<script src="myscript.js"></script>
+		<a href="1.html">jsCA q1</a>
+		<a href="2.html">jsCA q2</a>
+		<a href="3.html">graph xy</a>
 	</body>
 
 </html>
+
