Signed-off-by: Cathal Mc Givney <S00190028@mail.itsligo.ie>

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	</head>
 	<body>
 
-		<a href="1.html">jsCA q1</a>
-		<a href="2.html">jsCA q2</a>
-		<a href="3.html">graph xy</a>
+		<a href="jsca/one.html">jsCA q1</a>
+		<a href="jsca/two.html">jsCA q2</a>
+		<a href="graphxy/index.html">graph xy</a>
 	</body>
 
 </html>
